--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng --proxy-config proxy.conf.json",
+    "start": "ng serve --proxy-config proxy.conf.json",
     "api": "json-server server/db.json --watch",
     "build": "ng build",
     "test": "ng test",
